creusot/tests/should_fail/bug/436_2.stderr
error: encountered a cycle during translation: [Item(DefId(0:9 ~ 436_2[6940]::Bad::Some), ['{erased}]), Type(creusot_contracts::Snapshot<&'{erased} mut Bad<'{erased}>>), Type(Bad<'{erased}>), Item(DefId(0:7 ~ 436_2[6940]::Bad::None), ['{erased}])]
 --> 436_2.rs:6:5
  |
6 |     Some(Snapshot<&'a mut Bad<'a>>),
  |     ^^^^

error: aborting due to 1 previous error

